--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build:href": "ng build --base-href ./",
+    "build:href": "ng build --country-app-href ./",
     "build:github": "npm run delete:docs && npm run build:href && npm run copy:dist",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "delete:docs": "del-cli docs",
-    "copy:dist": "copyfiles dist/bases/browser/* ./docs -f"
+    "copy:dist": "copyfiles dist/country-app/browser/* ./docs -f"
   },
   "private": true,
   "dependencies": {
